# dai

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README.txt  average_data.py  build-callgraph.py  build.gradle.patch  callgraphSize  d1a.opam  dai.opam  diffCounts  dune-project  generate_table.py  kick_the_tires.sh  linesOfSourceCode  print_as_csv_row  print_as_cv_row_with_callstrings  run_all_experiments.zsh  run_callstring_configs  run_configs  run_configs_callstrings  run_diagnostic  run_experiments  run_null_configs  run_synthetic  run_synthetic_parallel  run_usertest.sh  scalability_experiments.sh  scalability_experiments_large.sh  scalability_experiments_small.sh
src/: abstract.ml  addr.ml  array_bounds.ml  array_bounds.mli  ast.ml  ast_parser.ml  cfg.ml  cfg_parser.ml  context.ml  daig.ml  dcg.ml  dcg_interpreter.ml  dcg_parser.ml  domain_intf.ml  domain_of_val.ml  domain_of_val.mli  dune  env.ml  env.mli  exec.ml  experiment_harness.ml  import.ml  incr.ml  interpreter.ml  itv.ml  itv.mli  octagon.ml  parser.ml  set_of_concrete.ml  set_of_concrete.mli  unit_dom.ml  unit_dom.mli
src/analysis/: callgraph.ml  callgraph.mli  context.ml  daig.ml  daig.mli  dsg.ml  dsg.mli  dune  hodaig.ml  hodaig.mli  query.ml
src/frontend/: callgraph.ml  callgraph.mli  cfg.ml  cfg.mli  cfg_parser.ml  cfg_parser.mli  dune  loc_map.ml  loc_map.mli  src_file.ml  src_file.mli  text_diff.ml  tree.ml  tree.mli  tree_diff.ml  tree_diff.mli
src/parsing/: cfg.ml  dune  loc_map.mli  src_file.ml  src_file.mli  text_diff.ml  text_diff.mli  tree.ml  tree.mli  tree_diff.ml
(+221 files in other folders)
