opam-version: "2.0"
maintainer: "Benno Stein <bennostein@colorado.edu>"
authors: "Benno Stein <bennostein@colorado.edu>"
dev-repo: "git://github.com/cuplv/dai.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "core"
  "regular"
  "graphlib"
  "dune" {>= "2.1.2" build}
  "yojson"
  "apron"
  "patience_diff"
  "ocamlformat" {= "0.19.0" build}
]
synopsis: "Demanded Abstract Interpretation"
description: "Demanded Abstract Interpretation"
